# AlphaOS

./: README.md
.github/workflows/: backfill-assets.yml  health-check.yml  performance-analysis.yml
fxig08ouh/: .gitignore  Cargo.toml  Justfile  README.md  SECURITY.md
fxig08ouh/.github/workflows/: ci.yml
fxig08ouh/boot/: Cargo.toml  README.md
fxig08ouh/boot/src/: framebuffer.rs  lib.rs  loader.rs  main.rs  measured_boot.rs  mmap.rs  uefi_entry.rs
fxig08ouh/drivers/: Cargo.toml  README.md
fxig08ouh/drivers/src/: framebuffer.rs  lib.rs  nvme.rs  ps2.rs  usb.rs  virtio_net.rs
fxig08ouh/enterprise/: Cargo.toml  README.md
fxig08ouh/enterprise/src/: ad.rs  lib.rs  mdm.rs  provisioning.rs
fxig08ouh/gfx/: Cargo.toml  README.md
fxig08ouh/gfx/src/: compositor.rs  font.rs  lib.rs
fxig08ouh/hv/: Cargo.toml  README.md
fxig08ouh/hv/src/: attest.rs  iommu.rs  lib.rs  msr.rs  svm.rs  vmx.rs
fxig08ouh/leaf-rt/: Cargo.toml  README.md
fxig08ouh/leaf-rt/src/: lib.rs
fxig08ouh/mk/: Cargo.toml  README.md
fxig08ouh/mk/src/: caps.rs  ipc.rs  lib.rs  sched.rs  syscalls.rs  task.rs
fxig08ouh/mk/src/arch/: gdt_idt.rs  interrupts.rs  mod.rs  transition.rs
fxig08ouh/mk/src/mem/: frame.rs  heap.rs  mod.rs  paging.rs
fxig08ouh/mk/src/time/: apic.rs  hpet.rs  mod.rs
fxig08ouh/posix/: Cargo.toml  README.md
fxig08ouh/posix/src/: abi.rs  lib.rs
fxig08ouh/radiation/: Cargo.toml  README.md
fxig08ouh/radiation/src/: lib.rs  redundancy.rs  scrubber.rs  watchdog.rs
fxig08ouh/rt/: Cargo.toml  README.md
fxig08ouh/rt/src/: checkpoint.rs  lib.rs  profiles.rs
fxig08ouh/scripts/: build-ovmf.md  check-toolchain.sh  gen-iso.sh  run-qemu.sh
fxig08ouh/sdk/: Cargo.toml  README.md
fxig08ouh/sdk/examples/hello/: Cargo.toml
fxig08ouh/sdk/examples/hello/src/: main.rs
fxig08ouh/sdk/include/: README.md
fxig08ouh/sdk/src/: lib.rs
fxig08ouh/security/: Cargo.toml  README.md
fxig08ouh/security/src/: enforcer.rs  lib.rs  policy.rs  sandbox.rs
fxig08ouh/servers/audio/: Cargo.toml  README.md
fxig08ouh/servers/audio/src/: main.rs
fxig08ouh/servers/display/: Cargo.toml  README.md
fxig08ouh/servers/display/src/: main.rs
fxig08ouh/servers/fs/: Cargo.toml  README.md
fxig08ouh/servers/fs/src/: main.rs
fxig08ouh/servers/input/: Cargo.toml  README.md
fxig08ouh/servers/input/src/: main.rs
fxig08ouh/servers/net/: Cargo.toml  README.md
fxig08ouh/servers/net/src/: main.rs
fxig08ouh/ux/: Cargo.toml  README.md
fxig08ouh/ux/src/: control_center.rs  installer.rs  lib.rs
fxig08ouh/vm/: Cargo.toml  README.md
fxig08ouh/vm/src/: lib.rs  overlay.rs  virtiofs.rs  vmm.rs
