[workspace]
members = [
    "boot",
    "drivers",
    "gfx",
    "enterprise",
    "hv",
    "mk",
    "posix",
    "security",
    "rt",
    "servers/audio",
    "servers/display",
    "servers/fs",
    "servers/input",
    "servers/net",
    "leaf-rt",
    "sdk",
    "radiation",
    "ux",
    "vm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["AegisOS Team <dev@aegisos.local>"]
publish = false

[workspace.dependencies]
bitflags = "2.5"
log = { version = "0.4", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
raw-cpuid = { version = "10.7", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "once"] }
uefi = { version = "0.27", default-features = false }
uart_16550 = { version = "0.3", default-features = false }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
linked_list_allocator = "0.10"
heapless = { version = "0.8", default-features = false }
static_assertions = "1.1"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
