[package]
name = "hv"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["AegisOS Team <dev@aegisos.local>"]
publish = false

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true, features = ["instructions"] }
raw-cpuid = { workspace = true }

[features]
default = []
svm = []
vmx = []
