[package]
name = "mk"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["AegisOS Team <dev@aegisos.local>"]
publish = false

[dependencies]
bitflags = { workspace = true }
heapless = { workspace = true }
linked_list_allocator = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }
x86_64 = { workspace = true, features = ["instructions", "nightly"] }

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
