[package]
name = "input-server"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["AegisOS Team <dev@aegisos.local>"]
publish = false

[dependencies]
drivers = { path = "../../drivers" }
mk = { path = "../../mk" }
log = { workspace = true }

[[bin]]
name = "input-server"
path = "src/main.rs"
