[package]
name = "net-server"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["AegisOS Team <dev@aegisos.local>"]
publish = false

[dependencies]
drivers = { path = "../../drivers" }
log = { workspace = true }
mk = { path = "../../mk" }

[[bin]]
name = "net-server"
path = "src/main.rs"
